📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15294,5 +15294,13 @@
         "published": "Tue, 16 Dec 2025 06:17:37 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46285376\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/bondi-beach-shooting-donate-gofundme-hub",
+        "title": "Bondi Beach mass shooting GoFundMe campaigns raise almost $2 million",
+        "link": "https://mashable.com/article/bondi-beach-shooting-donate-gofundme-hub",
+        "published": "Tue, 16 Dec 2025 08:12:09 +0000",
+        "source": "Mashable",
+        "summary": "GoFundMe has launched a hub of verified fundraisers for victims of the Bondi Beach mass shooting, Australia's deadliest in 30 years."
     }
 ]
