📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15302,5 +15302,29 @@
         "published": "Tue, 16 Dec 2025 08:12:09 +0000",
         "source": "Mashable",
         "summary": "GoFundMe has launched a hub of verified fundraisers for victims of the Bondi Beach mass shooting, Australia's deadliest in 30 years."
+    },
+    {
+        "id": "https://www.bbc.com/news/articles/c17p44w87rno",
+        "title": "The biggest heat pumps in the world",
+        "link": "https://www.bbc.com/news/articles/c17p44w87rno",
+        "published": "Tue, 16 Dec 2025 08:13:01 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46286030\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/ai-literacy-in-the-workplace-important-for-growth/",
+        "title": "AI literacy and continuous education are cornerstones",
+        "link": "https://www.artificialintelligence-news.com/news/ai-literacy-in-the-workplace-important-for-growth/",
+        "published": "Tue, 16 Dec 2025 08:36:43 +0000",
+        "source": "AI News",
+        "summary": "<p>Across the US, workers are experiencing a seismic shift in workplace operations as AI literacy becomes a core part of business strategies. This is redefining roles and expectations, while workloads continue to increase and pressure intensifies. As the employment landscape transforms, it has become clear that the future of work and talent will be defined [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/ai-literacy-in-the-workplace-important-for-growth/\">AI li"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/construction-industry-ai-success-potential/",
+        "title": "Strong contractor belief in AI for industry-wide transformation",
+        "link": "https://www.artificialintelligence-news.com/news/construction-industry-ai-success-potential/",
+        "published": "Tue, 16 Dec 2025 08:22:09 +0000",
+        "source": "AI News",
+        "summary": "<p>The construction industry generates colossal amounts of data, with much of it unused or locked in spreadsheets. AI is now changing this, enabling teams to accelerate decision-making, enhance margins, and improve project outcomes. According to new research from Dodge Construction Network (Dodge) and CMiC, the true transformative impact of AI is highlighted by contractors, with [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/construction-industry-ai-success-p"
     }
 ]
