📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15326,5 +15326,21 @@
         "published": "Tue, 16 Dec 2025 08:22:09 +0000",
         "source": "AI News",
         "summary": "<p>The construction industry generates colossal amounts of data, with much of it unused or locked in spreadsheets. AI is now changing this, enabling teams to accelerate decision-making, enhance margins, and improve project outcomes. According to new research from Dodge Construction Network (Dodge) and CMiC, the true transformative impact of AI is highlighted by contractors, with [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/construction-industry-ai-success-p"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/best-mobile-microphones-for-recording-with-a-phone-154536629.html?src=rss",
+        "title": "The best mobile microphones for 2026",
+        "link": "https://www.engadget.com/computing/accessories/best-mobile-microphones-for-recording-with-a-phone-154536629.html?src=rss",
+        "published": "Tue, 16 Dec 2025 10:01:25 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>There\u2019s nothing more frustrating than shooting the perfect reel only to realize that the audio sounds like garbage. For budding creators, it\u2019s a frustration; for those looking to make more professional content, it\u2019s a dealbreaker. Fortunately, the world of mobile-specific (or phone-friendly) microphones has exploded with great options in the last few years. Whether you\u2019ve been tasked with recording candid moments at a relative\u2019s wedding, shooting a friend\u2019s dance moves or are a journalist out"
+    },
+    {
+        "id": "https://gizmodo.com/ceos-want-to-keep-pouring-money-into-ai-despite-weak-returns-survey-2000700007",
+        "title": "CEOs Want to Keep Pouring Money Into AI, Despite Weak Returns: Survey",
+        "link": "https://gizmodo.com/ceos-want-to-keep-pouring-money-into-ai-despite-weak-returns-survey-2000700007",
+        "published": "Tue, 16 Dec 2025 10:00:38 +0000",
+        "source": "Gizmodo",
+        "summary": "Most executives say their AI projects aren\u2019t delivering returns, but nearly 70% still plan to spend more next year."
     }
 ]
