📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15342,5 +15342,109 @@
         "published": "Tue, 16 Dec 2025 10:00:38 +0000",
         "source": "Gizmodo",
         "summary": "Most executives say their AI projects aren\u2019t delivering returns, but nearly 70% still plan to spend more next year."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/solo-gp-neil-murray-closes-6m-fund-iii-to-back-nordic-founders/",
+        "title": "Solo VC and Lovable investor Neil Murray raises third Nordic-focused fund",
+        "link": "https://techcrunch.com/2025/12/16/solo-gp-neil-murray-closes-6m-fund-iii-to-back-nordic-founders/",
+        "published": "Tue, 16 Dec 2025 11:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The Nordic Web closes $6M Fund III."
+    },
+    {
+        "id": "https://www.wired.com/story/aura-frame-sale-december-2025/",
+        "title": "Aura Frame Sale (2025): From Aura Carver to Aura Ink",
+        "link": "https://www.wired.com/story/aura-frame-sale-december-2025/",
+        "published": "Tue, 16 Dec 2025 10:32:00 +0000",
+        "source": "WIRED",
+        "summary": "Aura\u2019s digital photo frames outshine the competition left and right, and you can score them on sale this holiday season."
+    },
+    {
+        "id": "https://gizmodo.com/adam-scotts-hokum-teaser-is-the-freakiest-40-seconds-youll-see-all-day-2000699884",
+        "title": "Adam Scott\u2019s \u2018Hokum\u2019 Teaser Is the Freakiest 40 Seconds You\u2019ll See All Day",
+        "link": "https://gizmodo.com/adam-scotts-hokum-teaser-is-the-freakiest-40-seconds-youll-see-all-day-2000699884",
+        "published": "Tue, 16 Dec 2025 11:00:03 +0000",
+        "source": "Gizmodo",
+        "summary": "The 'Severance' star dives into supernatural horror in the next film from 'Oddity' director Damien McCarthy; it hits theaters May 1."
+    },
+    {
+        "id": "https://gizmodo.com/is-openai-entering-its-acquisition-era-2000699888",
+        "title": "Is OpenAI Entering Its Acquisition Era?",
+        "link": "https://gizmodo.com/is-openai-entering-its-acquisition-era-2000699888",
+        "published": "Tue, 16 Dec 2025 10:30:12 +0000",
+        "source": "Gizmodo",
+        "summary": "The company just announced a major corporate development hire."
+    },
+    {
+        "id": "https://mashable.com/article/dec-16-fire-stick-hd-deal",
+        "title": "The Amazon Fire TV Stick HD is under $20 \u2014 act fast to save $16",
+        "link": "https://mashable.com/article/dec-16-fire-stick-hd-deal",
+        "published": "Tue, 16 Dec 2025 10:19:30 +0000",
+        "source": "Mashable",
+        "summary": "Get the best streaming stick deal at Amazon. Save 46% on the Amazon Fire TV Stick HD."
+    },
+    {
+        "id": "https://mashable.com/article/dec-16-fire-tv-deal",
+        "title": "Save $40 on the Amazon Fire TV 2-Series ahead of Christmas",
+        "link": "https://mashable.com/article/dec-16-fire-tv-deal",
+        "published": "Tue, 16 Dec 2025 10:17:08 +0000",
+        "source": "Mashable",
+        "summary": "Get the best TV deal ahead of Christmas. Save 27% on the Amazon Fire TV 2-Series."
+    },
+    {
+        "id": "https://mashable.com/article/how-to-watch-the-life-of-chuck",
+        "title": "How to watch The Life of Chuck: One of our top movies of the year is now streaming",
+        "link": "https://mashable.com/article/how-to-watch-the-life-of-chuck",
+        "published": "Tue, 16 Dec 2025 10:17:00 +0000",
+        "source": "Mashable",
+        "summary": "'The Life of Chuck' is now available to watch at home on video on demand. It will also be streaming on Hulu at a later date."
+    },
+    {
+        "id": "https://mashable.com/article/dec-16-shokz-openrun-pro-2-deal",
+        "title": "The Shokz OpenRun Pro 2 earbuds just got a $40 discount at Amazon",
+        "link": "https://mashable.com/article/dec-16-shokz-openrun-pro-2-deal",
+        "published": "Tue, 16 Dec 2025 10:14:48 +0000",
+        "source": "Mashable",
+        "summary": "Find the best running earbuds at Amazon. Save 22% on the Shokz OpenRun Pro 2 at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/knicks-spurs-nba-cup-final-2025-live-stream-for-free",
+        "title": "How to watch Knicks vs. Spurs in the NBA Cup final online for free",
+        "link": "https://mashable.com/article/knicks-spurs-nba-cup-final-2025-live-stream-for-free",
+        "published": "Tue, 16 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NBA for free. Live stream New York Knicks vs. San Antonio Spurs in the NBA Cup final for free from anywhere in the world."
+    },
+    {
+        "id": "https://readwrite.com/colombia-gambling-regulator-tougher-gambling-machines-rules/",
+        "title": "Colombia\u2019s gambling regulator signals tougher gambling machine rules",
+        "link": "https://readwrite.com/colombia-gambling-regulator-tougher-gambling-machines-rules/",
+        "published": "Tue, 16 Dec 2025 10:50:36 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A generated image of a Colombian branded slot machine. Coljuegos proposes tighter Colombia gambling machine rules\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/slot_machine_1200x800-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Coljuegos, the national gambling regulator of Colombia, has proposed a draft bill to tighten regulations on gambling machines. These s"
+    },
+    {
+        "id": "https://a2ui.org/",
+        "title": "A2UI: A Protocol for Agent-Driven Interfaces",
+        "link": "https://a2ui.org/",
+        "published": "Tue, 16 Dec 2025 09:16:31 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46286407\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/jpmorgan-chase-ai-strategy-2025/",
+        "title": "JPMorgan Chase AI strategy: US$18B bet paying off",
+        "link": "https://www.artificialintelligence-news.com/news/jpmorgan-chase-ai-strategy-2025/",
+        "published": "Tue, 16 Dec 2025 11:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>JPMorgan Chase&#8217;s AI strategy is delivering measurable returns \u2013 but at a human cost. The bank isn&#8217;t hiding the fact. With 200,000 employees now using its proprietary LLM Suite platform daily and AI benefits growing 30-40% annually, America&#8217;s largest bank is executing what Chief Analytics Officer Derek Waldron calls a plan to create the world&#8217;s [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/jpmorgan-chase-ai-strategy-2025/\">JPMorgan "
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/16/1129887/quantum-navigation-militarys-gps-jamming-problem/",
+        "title": "Quantum navigation could solve the military\u2019s GPS jamming problem",
+        "link": "https://www.technologyreview.com/2025/12/16/1129887/quantum-navigation-militarys-gps-jamming-problem/",
+        "published": "Tue, 16 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "In late September, a Spanish military plane carrying the country\u2019s defense minister to a base in Lithuania was reportedly the subject of a kind of attack\u2014not by a rocket or anti-aircraft rounds, but by radio transmissions that jammed its GPS system.\u00a0 The flight landed safely, but it was one of thousands that have been affected&#8230;"
     }
 ]
