📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15446,5 +15446,117 @@
         "published": "Tue, 16 Dec 2025 10:00:00 +0000",
         "source": "MIT Technology Review",
         "summary": "In late September, a Spanish military plane carrying the country\u2019s defense minister to a base in Lithuania was reportedly the subject of a kind of attack\u2014not by a rocket or anti-aircraft rounds, but by radio transmissions that jammed its GPS system.\u00a0 The flight landed safely, but it was one of thousands that have been affected&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/everbloom-built-an-ai-to-turn-chicken-feathers-into-cashmere/",
+        "title": "Everbloom built an AI to turn chicken feathers into cashmere",
+        "link": "https://techcrunch.com/2025/12/16/everbloom-built-an-ai-to-turn-chicken-feathers-into-cashmere/",
+        "published": "Tue, 16 Dec 2025 12:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Everbloom has also developed a chemical process to transform waste fibers and feathers into upcycled materials that resemble everything from polyester to cashmere."
+    },
+    {
+        "id": "https://www.theverge.com/science/844852/solar-energy-panel-installation-tax-credit-trump",
+        "title": "The \u2018mad rush\u2019 to install solar panels before tax credits run out",
+        "link": "https://www.theverge.com/science/844852/solar-energy-panel-installation-tax-credit-trump",
+        "published": "2025-12-16T07:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Ed Murray has been in the solar business long enough to remember the bloodbath of 1985. That's when President Ronald Reagan ended Jimmy Carter-era solar tax credits meant to decrease US reliance on fossil fuels following the 1970s oil crisis. \"It was a sad time,\" says Murray, who is president of the trade group California [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/google-aluminium-os-chromebook-successor-is-coming/",
+        "title": "Aluminium OS: Everything We Know About the Chromebook Successor",
+        "link": "https://www.wired.com/story/google-aluminium-os-chromebook-successor-is-coming/",
+        "published": "Tue, 16 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Google has officially acknowledged the upcoming merger of Android and Chromebooks, and it may be coming in 2026."
+    },
+    {
+        "id": "https://www.wired.com/story/the-big-interview-podcast-matt-garman-ceo-aws/",
+        "title": "AWS CEO Matt Garman Doesn\u2019t Think AI Should Replace Junior Devs",
+        "link": "https://www.wired.com/story/the-big-interview-podcast-matt-garman-ceo-aws/",
+        "published": "Tue, 16 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "The head of Amazon Web Services has big plans to offer AI tools to businesses, but says that replacing coders with AI is \u201ca non-starter for anyone who\u2019s trying to build a long-term company.\u201d"
+    },
+    {
+        "id": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121547853.html?src=rss",
+        "title": "The Morning After: Roomba maker iRobot files for bankruptcy",
+        "link": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121547853.html?src=rss",
+        "published": "Tue, 16 Dec 2025 12:15:47 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>iRobot, the company that brought robotic vacuum cleaners to homes and popular culture, has filed for  <a href=\"https://www.engadget.com/home/irobot-has-filed-for-bankruptcy-and-may-be-taken-over-by-its-primary-supplier-091602257.html\">bankruptcy</a>. It plans to sell all assets to its primary supplier, the Chinese company Picea Robotics. Investors \u201cwill experience a total loss and not receive recovery on their investment\u201d if the deal is approved, iRobot said. The company didn\u2019t discuss how th"
+    },
+    {
+        "id": "https://gizmodo.com/5-years-later-apple-airpods-max-feel-as-bougie-as-ever-2000699865",
+        "title": "5 Years Later, AirPods Max Feel as Bougie as Ever",
+        "link": "https://gizmodo.com/5-years-later-apple-airpods-max-feel-as-bougie-as-ever-2000699865",
+        "published": "Tue, 16 Dec 2025 12:00:21 +0000",
+        "source": "Gizmodo",
+        "summary": "With a price that will make you cry iPhone-sized tears, the AirPods Max still feel like one of the best status symbols you can buy."
+    },
+    {
+        "id": "https://gizmodo.com/it-welcome-to-derry-creators-lift-the-lid-on-that-not-so-surprising-finale-cameo-2000700011",
+        "title": "\u2018It: Welcome to Derry\u2019 Creators Lift the Lid on That Not-So-Surprising Finale Cameo",
+        "link": "https://gizmodo.com/it-welcome-to-derry-creators-lift-the-lid-on-that-not-so-surprising-finale-cameo-2000700011",
+        "published": "Tue, 16 Dec 2025 12:00:04 +0000",
+        "source": "Gizmodo",
+        "summary": "The Stephen King adaptation wrapped up its first season Sunday night on HBO with a little slice of fan service."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-16-2025",
+        "title": "NYT Mini crossword answers, hints for December 16, 2025",
+        "link": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-16-2025",
+        "published": "Tue, 16 Dec 2025 11:35:41 +0000",
+        "source": "Mashable",
+        "summary": "Answers to each clue for the December 16, 2025 edition of NYT's The Mini crossword puzzle."
+    },
+    {
+        "id": "https://mashable.com/video/seth-meyers-rob-reiner-trump",
+        "title": "Seth Meyers pays tribute to Rob Reiner, slams Trump for his post",
+        "link": "https://mashable.com/video/seth-meyers-rob-reiner-trump",
+        "published": "Tue, 16 Dec 2025 10:53:37 +0000",
+        "source": "Mashable",
+        "summary": "Seth Meyers has paid tribute to Rob Reiner and his wife Michele, and responded to Trump's post about Reiner on Truth Social."
+    },
+    {
+        "id": "https://readwrite.com/nebraska-collects-200k-child-support-gambling-winnings/",
+        "title": "Nebraska collects $200K in child support from gambling winnings",
+        "link": "https://readwrite.com/nebraska-collects-200k-child-support-gambling-winnings/",
+        "published": "Tue, 16 Dec 2025 12:04:34 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"The Nebraska Department of Health and Human Services (DHHS) logo. Nebraska collects $200K in child support from gambling winnings\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/nebraska_dhhs_1200x800-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The Nebraska Department of Health and Human Services (DHHS) has announced that it has successfully recouped $200,000 "
+    },
+    {
+        "id": "https://readwrite.com/connor-mcdavid-betmgm-commercial/",
+        "title": "Connor McDavid returns in BetMGM commercial, focusing on responsible gambling",
+        "link": "https://readwrite.com/connor-mcdavid-betmgm-commercial/",
+        "published": "Tue, 16 Dec 2025 11:23:35 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Two men sat down fishing in the middle of a snowy landscape. Connor McDavid returns in BetMGM commercial, focusing on responsible gambling\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/ATS-21-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The three-time Hart Memorial Trophy winner Connor McDavid is now starring in a BetMGM ad which highlights the brand&#8217;s "
+    },
+    {
+        "id": "https://readwrite.com/crypto-com-pulls-prediction-market-sports-contracts-arizona/",
+        "title": "Crypto.com pulls prediction market and sports contracts from Arizona",
+        "link": "https://readwrite.com/crypto-com-pulls-prediction-market-sports-contracts-arizona/",
+        "published": "Tue, 16 Dec 2025 11:14:26 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Phoenix, Arizona. Crypto.com pulls prediction market and sports contracts from Arizona\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Phoenix-Arizona-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Arizona becomes the ninth state that Crypto.com has stopped offering prediction markets and sports contracts in. As of Tuesday, December&#8230; <a class=\"more-link\" hr"
+    },
+    {
+        "id": "https://github.com/scallyw4g/bonsai",
+        "title": "Bonsai: A Voxel Engine, from scratch",
+        "link": "https://github.com/scallyw4g/bonsai",
+        "published": "Tue, 16 Dec 2025 06:06:43 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46285319\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/bnp-paribas-introduces-ai-tool-for-investment-banking/",
+        "title": "BNP Paribas introduces AI tool for investment banking",
+        "link": "https://www.artificialintelligence-news.com/news/bnp-paribas-introduces-ai-tool-for-investment-banking/",
+        "published": "Tue, 16 Dec 2025 12:10:00 +0000",
+        "source": "AI News",
+        "summary": "<p>BNP Paribas is testing how far AI can be pushed into the day-to-day mechanics of investment banking. According to Financial News, the bank has rolled out an internal tool called IB Portal, designed to help bankers assemble client pitches more quickly and with less repetition. Pitch preparation sits at the centre of investment banking work. [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/bnp-paribas-introduces-ai-tool-for-investment-banking/\">BNP Paribas int"
     }
 ]
