📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15710,5 +15710,173 @@
         "published": "Tue, 16 Dec 2025 12:29:04 +0000",
         "source": "MIT Technology Review",
         "summary": "Can I ask you a question: How do you feel about AI right now? Are you still excited? When you hear that OpenAI or Google just dropped a new model, do you still get that buzz? Or has the shine come off it, maybe just a teeny bit? Come on, you can be honest with&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/adobe-firefly-now-supports-prompt-based-video-editing-adds-more-third-party-models/",
+        "title": "Adobe Firefly now supports prompt-based video editing, adds more third-party models",
+        "link": "https://techcrunch.com/2025/12/16/adobe-firefly-now-supports-prompt-based-video-editing-adds-more-third-party-models/",
+        "published": "Tue, 16 Dec 2025 14:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Adobe is updating its AI video-generation app, Firefly, with a new video editor that supports precise prompt-based edits, as well as adding new third-party models for image and video generation, including Black Forest Labs' FLUX.2 and Topaz Astra."
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/844731/avatar-fire-and-ash-review",
+        "title": "Avatar: Fire and Ash is a gorgeous spectacle of titanic proportions",
+        "link": "https://www.theverge.com/entertainment/844731/avatar-fire-and-ash-review",
+        "published": "2025-12-16T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "In the almost 20 years since James Cameron first introduced us to the alien world of Pandora, 20th Century Studios has repeatedly tried to parlay the Avatar films' financial success into a sprawling multimedia franchise. Almost immediately after the first movie hit theaters, there was a video game, plans for a book series that never [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/844926/fallout-season-2-review-amazon-prime-video",
+        "title": "Fallout\u2019s goofy apocalypse gets serious in season 2",
+        "link": "https://www.theverge.com/entertainment/844926/fallout-season-2-review-amazon-prime-video",
+        "published": "2025-12-16T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The most impressive thing about Fallout's first season was how well it nailed the tone. The games are a mix of grim and goofy, a postapocalyptic story in a bleak world that's also full of crude jokes and ridiculous characters. It's a tough balance to get right - too serious and it's a miserable place [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/games/845242/animal-crossing-new-horizons-3-0-update-switch-2-edition-features",
+        "title": "I\u2019ve been waiting years for Animal Crossing\u2019s best new features",
+        "link": "https://www.theverge.com/games/845242/animal-crossing-new-horizons-3-0-update-switch-2-edition-features",
+        "published": "2025-12-16T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "I never felt done with my Animal Crossing: New Horizons island. Despite playing every day for two years, and racking up 1,700 hours of playtime, I somehow never finished decorating. I had plenty of ideas for my island, sure, but actually implementing them was another story: The decorating and terraforming systems that helped make New [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/american-giant-redesign-classic-full-zip-hoodie/",
+        "title": "American Giant Redesigns Its Iconic Classic Full Zip Hoodie",
+        "link": "https://www.wired.com/story/american-giant-redesign-classic-full-zip-hoodie/",
+        "published": "Tue, 16 Dec 2025 14:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The refreshed Classic Full Zip hoodie uses a softer cotton fleece, but it\u2019s still US-made. It\u2019s the first major overhaul of American Giant\u2019s most well-loved sweatshirt."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-white-elephant-gifts-2025/",
+        "title": "16 Best White Elephant Gifts (2025): Coffee Pot Mug, Legos, Sushi Magnets, and More",
+        "link": "https://www.wired.com/gallery/best-white-elephant-gifts-2025/",
+        "published": "Tue, 16 Dec 2025 13:36:00 +0000",
+        "source": "WIRED",
+        "summary": "Bring the gift everyone will want to win from this year's holiday party, from a cute jacket for a beer can to magnets they'll wish they could eat."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/tv-movies/avatar-fire-and-ash-review-maybe-its-time-to-sunset-pandora-140000997.html?src=rss",
+        "title": "Avatar Fire and Ash review: Maybe it's time to sunset Pandora",
+        "link": "https://www.engadget.com/entertainment/tv-movies/avatar-fire-and-ash-review-maybe-its-time-to-sunset-pandora-140000997.html?src=rss",
+        "published": "Tue, 16 Dec 2025 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>No matter what you think of James Cameron's <em>Avatar</em> movies,&nbsp;their technical ambitions are undeniable. Cameron <a class=\"link\" href=\"https://en.wikipedia.org/wiki/Fusion_Camera_System\" target=\"_blank\">developed his own camera system</a> to shoot the first <em>Avatar</em> in 3D, but since most of the actors were digitally captured, he also had the freedom to construct scenes with a virtual camera after they were physically shot. For <a class=\"link\" href=\"https://www.engadget.com/av"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/mercedes-benz-cla-first-drive-head-of-the-ev-class-140000562.html?src=rss",
+        "title": "Mercedes-Benz CLA first drive: Head of the EV class",
+        "link": "https://www.engadget.com/transportation/evs/mercedes-benz-cla-first-drive-head-of-the-ev-class-140000562.html?src=rss",
+        "published": "Tue, 16 Dec 2025 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>This one's been a long time coming. Mercedes-Benz has been researching, refining and even reshaping the car that would ultimately be the CLA for years now, teasing us with technical briefings and even showing off a sultry crimson concept car a full two years ago.</p><p>That was the <a class=\"link\" href=\"https://www.engadget.com/the-mercedes-benz-concept-cla-class-mixes-big-range-and-big-style-130222801.html\" target=\"_blank\">Concept CLA</a>, and while the production CLA you see here doesn't lo"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/tv-movies/fallout-season-2-review-viva-new-vegas-140000678.html?src=rss",
+        "title": "Fallout Season 2 review: Viva New Vegas",
+        "link": "https://www.engadget.com/entertainment/tv-movies/fallout-season-2-review-viva-new-vegas-140000678.html?src=rss",
+        "published": "Tue, 16 Dec 2025 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The follow-up to a <a class=\"link\" href=\"https://www.engadget.com/the-fallout-tv-series-is-a-very-awesome-tv-show-130039789.html\" target=\"_blank\">successful debut</a> is often harder to make than the first, and that goes double when the inspiration for a show comes from the <a class=\"link\" href=\"https://www.engadget.com/2010-10-19-fallout-new-vegas-review.html\" target=\"_blank\">most beloved installment of the underlying franchise</a>. That's precisely the challenge <em>Fallout</em> season 2 is"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/china-approves-two-level-3-autonomous-evs-134548316.html?src=rss",
+        "title": "China approves two level-3 autonomous EVs",
+        "link": "https://www.engadget.com/transportation/china-approves-two-level-3-autonomous-evs-134548316.html?src=rss",
+        "published": "Tue, 16 Dec 2025 13:45:48 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>China has taken another step forward in the self-driving car market. The country's Ministry of Industry and Information Technology (MIIT) has <a href=\"https://www.miit.gov.cn/xwfb/gxdt/sjdt/art/2025/art_f734c7074580470593d4018742997640.html\">made its first approval</a> for cars with level-3 autonomous driving capabilities. The two electric sedans come from state-owned automakers Changan Auto and BAIC Motor.</p>\n<p>The US National Highway Transportation Safety Administration (NHTSA) <a href=\"h"
+    },
+    {
+        "id": "https://gizmodo.com/avatar-fire-and-ash-movie-review-james-cameron-2000694265",
+        "title": "\u2018Avatar: Fire and Ash\u2019 Is Completely Insane in the Best Possible Way",
+        "link": "https://gizmodo.com/avatar-fire-and-ash-movie-review-james-cameron-2000694265",
+        "published": "Tue, 16 Dec 2025 14:00:47 +0000",
+        "source": "Gizmodo",
+        "summary": "James Cameron's new film, starring Sam Worthington, Zoe Salda\u00f1a, Sigourney Weaver, and Stephen Lang, is in theaters December 19."
+    },
+    {
+        "id": "https://gizmodo.com/fallout-season-2-review-amazon-prime-video-2000699991",
+        "title": "\u2018Fallout\u2019 Season 2 Is a Slower, Smarter Follow-Up",
+        "link": "https://gizmodo.com/fallout-season-2-review-amazon-prime-video-2000699991",
+        "published": "Tue, 16 Dec 2025 14:00:21 +0000",
+        "source": "Gizmodo",
+        "summary": "The sophomore season of Prime Video's smash-hit gaming adaptation doesn't fix what isn't broken, for better and occasionally worse."
+    },
+    {
+        "id": "https://gizmodo.com/godzilla-x-kong-supernova-villain-spacegodzilla-2000700058",
+        "title": "Has \u2018Godzilla X Kong: Supernova\u2019 Found Its Big New Villain?",
+        "link": "https://gizmodo.com/godzilla-x-kong-supernova-villain-spacegodzilla-2000700058",
+        "published": "Tue, 16 Dec 2025 13:00:03 +0000",
+        "source": "Gizmodo",
+        "summary": "Plus, Nia DaCosta teases Dr. Kelson's 'quite weird' turn in '28 Years Later: The Bone Temple'."
+    },
+    {
+        "id": "https://mashable.com/article/roblox-2025-replay-report-gen-z-users",
+        "title": "Robloxs 2025 Replay shows just how obsessed Gen Z is with the game",
+        "link": "https://mashable.com/article/roblox-2025-replay-report-gen-z-users",
+        "published": "Tue, 16 Dec 2025 14:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Roblox has released its 2025 Replay report which spotlights just how big the game is, especially with Gen Z."
+    },
+    {
+        "id": "https://mashable.com/article/coffee-meets-bagel-realness-report-2025",
+        "title": "Top challenges for online daters, according to Coffee Meets Bagel",
+        "link": "https://mashable.com/article/coffee-meets-bagel-realness-report-2025",
+        "published": "Tue, 16 Dec 2025 14:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Dating app CMB's Dating Realness Report identifies daters' desires and challenges this year."
+    },
+    {
+        "id": "https://mashable.com/article/fallout-season-2-review",
+        "title": "Fallout Season 2 review: Our introduction to New Vegas is a blast, and more relevant than ever",
+        "link": "https://mashable.com/article/fallout-season-2-review",
+        "published": "Tue, 16 Dec 2025 14:00:00 +0000",
+        "source": "Mashable",
+        "summary": "\"Fallout\" Season 2 delivers a killer welcome to New Vegas, as well as pertinent questions about how we can handle the bleakness of our current reality."
+    },
+    {
+        "id": "https://mashable.com/article/avatar-fire-and-ash-review",
+        "title": "Avatar: Fire and Ash review: How can a film be so stunning, yet so disappointing?",
+        "link": "https://mashable.com/article/avatar-fire-and-ash-review",
+        "published": "Tue, 16 Dec 2025 14:00:00 +0000",
+        "source": "Mashable",
+        "summary": "\"Avatar: Fire and Ash\" obviously looks incredible. Yet James Cameron retreads familiar ground in a way that never lets it be great."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-portable-ssd-t9-review/",
+        "title": "The fastest portable SSD I've used is also the smallest (and it's not even close)",
+        "link": "https://www.zdnet.com/article/samsung-portable-ssd-t9-review/",
+        "published": "Tue, 16 Dec 2025 14:02:00 GMT",
+        "source": "Latest news",
+        "summary": "Samsung's T9 SSD offers up to 4TB of storage with transfer speeds of up to 20Gbps - in an ultraportable form factor."
+    },
+    {
+        "id": "https://www.tum.de/en/news-and-events/all-news/press-releases/details/40-percent-of-mri-signals-do-not-correspond-to-actual-brain-activity",
+        "title": "40 percent of MRI signals do not correspond to actual brain activity",
+        "link": "https://www.tum.de/en/news-and-events/all-news/press-releases/details/40-percent-of-mri-signals-do-not-correspond-to-actual-brain-activity",
+        "published": "Tue, 16 Dec 2025 13:46:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46288415\">Comments</a>"
+    },
+    {
+        "id": "https://blog.mathieui.net/this-is-not-the-future.html",
+        "title": "This is not the future",
+        "link": "https://blog.mathieui.net/this-is-not-the-future.html",
+        "published": "Tue, 16 Dec 2025 13:42:24 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46288371\">Comments</a>"
+    },
+    {
+        "id": "https://blog.guillaume-gomez.fr/articles/2025-12-15+Rust+GCC+backend%3A+Why+and+how",
+        "title": "Rust GCC back end: Why and how",
+        "link": "https://blog.guillaume-gomez.fr/articles/2025-12-15+Rust+GCC+backend%3A+Why+and+how",
+        "published": "Tue, 16 Dec 2025 13:33:25 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46288291\">Comments</a>"
     }
 ]
